fix(packages/app): sidecar header overflow with badge and duration
Fixes #2139

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -871,6 +871,10 @@ sidecar .header-right-bits {
   align-items: flex-end;
   justify-content: space-evenly;
 }
+.sidecar-header .badges:not(:empty) + .activation-duration {
+  margin-top: 0.1em;
+  font-size: 1.5em;
+}
 .sidecar-header .activation-duration,
 .sidecar-header .kind {
   font-weight: bold;
